--- a/labwork/lab2/tensorflow/Lab 2 Assignment 2.2 Logistic Regression.ipynb
+++ b/labwork/lab2/tensorflow/Lab 2 Assignment 2.2 Logistic Regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -12,11 +12,10 @@
       "h0 values: 0.5\n",
       "after rounding off, h0 value:\n",
       "1.0\n",
-      "cost function: -inf\n",
-      "error reached beyond threshold value\n",
+      "cost function: nan\n",
       "After 500 epoch values:\n",
-      "theta 1 :  0.821931\n",
-      "theta 0 :  0.109044\n"
+      "theta 1 :  0.226671\n",
+      "theta 0 :  1.41823\n"
      ]
     }
    ],
